@@ -7,6 +7,7 @@ import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 
 public class DistanceMatrixExample {
     static int secToHr(int seconds){
@@ -16,17 +17,14 @@ public class DistanceMatrixExample {
         return seconds%3600;
     }
     public static void main(String[] args) throws Exception {
-        String origins = "London SW1A 1AA,United Kingdom";
-        String destinations = "Oxford,United Kingdom";
-        String key = "hSDDUzoJ33JfbRdRDqaiLwoC4qEAkh5OxNFaTcJidQMOgcfHeQRdtC0sWbiyMtq1";
-
-        String url = "https://api.distancematrix.ai/maps/api/distancematrix/json"
-                + "?origins=" + java.net.URLEncoder.encode(origins, "UTF-8")
-                + "&destinations=" + java.net.URLEncoder.encode(destinations, "UTF-8")
-                + "&mode=driving"
-                + "&departure_time=now"
-                + "&traffic_model=best_guess"
-                + "&key=" + key;
+        String address = "Caerleon Rd Llanfrechfa Cwmbran";
+        String destinations = "Caerleon Rd Llanfrechfa Cwmbran";
+        String key1 = "hSDDUzoJ33JfbRdRDqaiLwoC4qEAkh5OxNFaTcJidQMOgcfHeQRdtC0sWbiyMtq1";
+        String key2 = "Mg0A04b5TpNTxXHsUGFkeZl7XC8DYosywmJ3jRmtacwYIHaoqHJlblxwKg8aUpLp";
+        //String traffic = """&departure_time=now" + "&traffic_model=best_guess""";
+        String url = "https://api.distancematrix.ai/maps/api/geocode/json"
+                + "?address=" + java.net.URLEncoder.encode(address, StandardCharsets.UTF_8)
+                + "&key=" + key2;
 
         HttpClient client = HttpClient.newHttpClient();
         HttpRequest request = HttpRequest.newBuilder()
@@ -40,17 +38,15 @@ public class DistanceMatrixExample {
 
         JsonObject root = JsonParser.parseString(json).getAsJsonObject();
 
-        JsonObject element = root.getAsJsonArray("rows").get(0).getAsJsonObject().getAsJsonArray("elements").get(0).getAsJsonObject();
+        JsonObject element = root.getAsJsonArray("result")
+                .get(0).getAsJsonObject()
+                .getAsJsonObject("geometry")
+                .getAsJsonObject("location");
 
-        int distanceMeters = element.getAsJsonObject("distance").get("value").getAsInt();
-
-        int durationSeconds = element.getAsJsonObject("duration_in_traffic").get("value").getAsInt();
-        String time = element.getAsJsonObject("duration_in_traffic").get("text").getAsString();// change to duration if not wanting traffic
-
-        System.out.println(distanceMeters);
-        System.out.println(durationSeconds);
-        System.out.println(secToHr(durationSeconds) + secToRemainMinutes(durationSeconds));
-        System.out.println(time);
+        double lat = element.get("lat").getAsDouble();
+        double lng = element.get("lng").getAsDouble();
+        System.out.println("Lat: " + lat);
+        System.out.println("Lng: " + lng);
 
 
 
